fix(styles): adjust z-index values in common.scss and index.vue for improved layout stacking

--- a/bookmarkify-web/assets/css/common.scss
+++ b/bookmarkify-web/assets/css/common.scss
@@ -38,7 +38,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 50;
+  z-index: 9999;
 }
 
 [command-dialog-wrapper] {
